{
    "name": "DefaultAction",
    "maps": [
        {
            "name": "Rocket",
            "id": "50b944d6-b970-478f-84bd-d1d9fe273b9e",
            "actions": [
                {
                    "name": "ForceUp",
                    "type": "PassThrough",
                    "id": "7df49d9f-e1e0-4a98-b5b9-831c931d5d97",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "LeftRight",
                    "type": "PassThrough",
                    "id": "03d2d950-2cc0-481f-8fb9-f885c4abe399",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(behavior=2)"
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "488c9759-5a4f-4d28-b96a-1491a4f82101",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ForceUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "1D Axis",
                    "id": "45685553-b94a-48f9-b566-c2983256f8ad",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftRight",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "d849f10c-e21d-46fc-a093-f192b332bbfa",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftRight",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "70c8b858-b0dc-4e4d-ac0c-3e29509ebd5f",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftRight",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": []
}